Changed nginx docker configs

--- a/nginx_tut/nginx_custom/Dockerfile
+++ b/nginx_tut/nginx_custom/Dockerfile
@@ -1,10 +1,15 @@
 FROM ubuntu:focal
 
-COPY . .
-RUN apt-get update && apt-get install -y curl gnupg2 ca-certificates lsb-release python3-pip
-RUN echo "deb http://nginx.org/packages/mainline/ubuntu `lsb_release -cs` nginx" \
-    | tee /etc/apt/sources.list.d/nginx.list
-RUN curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add -
-RUN apt-get update && apt-get install -y nginx && python3 -m pip install -r requirements.txt
+COPY ./data .
+COPY ./systemd/nginx.service /lib/systemd/system/nginx.service
 
-CMD ["python3", "hc.py"]
+ENV TERM=xterm-256color
+ARG DEBIAN_FRONTEND=noninteractive
+
+RUN bash -c 'apt-get update && apt-get install -y curl gnupg2 ca-certificates lsb-release python3-pip libpcre3 libpcre3-dev zlib1g zlib1g-dev libssl-dev && \
+    echo "deb http://nginx.org/packages/mainline/ubuntu `lsb_release -cs` nginx" \
+    | tee /etc/apt/sources.list.d/nginx.list && \
+    curl -fsSL https://nginx.org/keys/nginx_signing.key | apt-key add - && \
+    apt-get update && apt-get install -y nginx && python3 -m pip install -r requirements.txt && nginx'
+
+CMD bash -c 'nginx && python3 hc.py'
