--- a/nginx_tut/nginx_configs/module-3.conf
+++ b/nginx_tut/nginx_configs/module-3.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         server_name 127.0.0.1;
 
-        root /sites/lec10;
+        root /sites/module3;
 
         set $weekend 'Today is a weekday';
 
@@ -15,15 +15,13 @@ http {
             set $weekend 'Happy weekend';
         }
 
-    
-        
-        try_files $uri /not_found;
-
         rewrite ^/logo /thumb.png;
         rewrite ^/user/(\w+) /greet?user=$1&redirect=user;
-        rewrite ^/not_found /not_found.html;
+        #rewrite ^/not_found /not_found.html;
         rewrite ^/$ /index.html;
-        
+
+        try_files $uri /not_found;
+
         location = /grEet {
             return 200 'Secret HI!';
         }
@@ -34,7 +32,7 @@ http {
 
         location ~* /greet.* {
             return 200 'Hi $arg_user!';
-        }   
+        }
 
         location = /weekend {
             return 200 'Date: $date_local\n$weekend';
@@ -44,5 +42,8 @@ http {
             return 200 'Name: $arg_name\nProduct: $arg_product\nAuth: $arg_apikey';
         }
 
+        location /not_found {
+            error_page 404 /not_found.html;
+        }
     }
 }
