Added stuff til module 2

--- a/php_tut/homebrew-xampp/docker-compose.yml
+++ b/php_tut/homebrew-xampp/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - xampp-pma-volume:/var/www/html/php_tut
 
 networks:
   xampp-network:
