Added apache config

--- a/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
+++ b/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
@@ -159,8 +159,7 @@ Include ports.conf
 <Directory />
         Options FollowSymLinks
         AllowOverride None
-        Require all granted
-        Allow from all
+        Require all denied
 </Directory>
 
 <Directory /usr/share>
@@ -172,6 +171,9 @@ Include ports.conf
         Options Indexes FollowSymLinks
         AllowOverride None
         Require all granted
+        Satisfy Any
+        Order allow,deny
+        Allow from all
 </Directory>
 
 #<Directory /srv/>
