--- a/php_tut/homebrew-xampp/phpMyAdmin-custom/Dockerfile
+++ b/php_tut/homebrew-xampp/phpMyAdmin-custom/Dockerfile
@@ -17,13 +17,14 @@ RUN chown -R nobody:nogroup /tmp && cd /tmp && apt-get update && apt-get install
     curl -o php-common_76_all.deb -s http://ftp.debian.org/debian/pool/main/p/php-defaults/php-common_76_all.deb && dpkg -i php-common_76_all.deb && \
     curl -o php7.4-common_7.4.11-1_amd64.deb -s http://ftp.debian.org/debian/pool/main/p/php7.4/php7.4-common_7.4.11-1_amd64.deb && dpkg -i php7.4-common_7.4.11-1_amd64.deb && \
     curl -o php7.4-sqlite3_7.4.11-1_amd64.deb -s http://ftp.debian.org/debian/pool/main/p/php7.4/php7.4-sqlite3_7.4.11-1_amd64.deb && dpkg -i php7.4-sqlite3_7.4.11-1_amd64.deb && \
+    curl -o php7.4-mysql_7.4.11-1_amd64.deb -s http://ftp.debian.org/debian/pool/main/p/php7.4/php7.4-mysql_7.4.11-1_amd64.deb && dpkg -i php7.4-mysql_7.4.11-1_amd64.deb && \
     curl -o php7.4-gd_7.4.11-1_amd64.deb -s http://ftp.debian.org/debian/pool/main/p/php7.4/php7.4-gd_7.4.11-1_amd64.deb && dpkg -i php7.4-gd_7.4.11-1_amd64.deb &&\
     curl -o webalizer_2.23.08-3.1_amd64.deb -s  http://ftp.debian.org/debian/pool/main/w/webalizer/webalizer_2.23.08-3.1_amd64.deb && dpkg -i webalizer_2.23.08-3.1_amd64.deb &&\
     apt-get install -y apache2-dev freetds-bin freetds-common freetds-dev gettext\
     gettext-base libc-client2007e libc-client2007e-dev ldap-utils libldap-2.4-2 libldap-common libldap2-dev slapd mcrypt libmhash-dev libmhash2 libxslt1-dev libxslt1.1 xsltproc libapache2-mod-apreq2 \
     libapreq2-3 libapreq2-dev libapache2-request-perl icu-devtools libicu-dev libicu67 libapr1 libapr1-dev libaprutil1 libaprutil1-dbd-mysql libaprutil1-dbd-sqlite3 libaprutil1-dev libaprutil1-ldap && \
     echo deb http://deb.debian.org/debian experimental main >> /etc/apt/sources.list && apt-get update && apt-get -t experimental install -y perl libperl-dev libperl5.32 && \
-    apt-get install -y proftpd-basic proftpd-mod*   
+    apt-get install -y proftpd-basic proftpd-mod*
 
 RUN cpan -i CPAN::DistnameInfo Bundle::Apache2 && cpan -i Net::SSLeay GD XML::Parser XML::LibXML LWP::UserAgent Curses && cpan -i Locale::gettext XML::LibXSLT && cd / && rm -rf /tmp && mkdir /tmp && apt-get autoremove -y && chmod 777 /tmp && mkdir /var/www/html/php_tut && chmod 755 /var/www/html/php_tut
 
