Updated apache conf

--- a/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
+++ b/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
@@ -176,6 +176,17 @@ Include ports.conf
         Allow from all
 </Directory>
 
+<Directory /var/www/html/php_tut>
+
+
+        Options +Indexes FollowSymLinks
+        AllowOverride All
+        Require all granted
+        Satisfy Any
+        Order allow,deny
+        Allow from all
+</Directory>
+
 #<Directory /srv/>
 #       Options Indexes FollowSymLinks
 #       AllowOverride None
