--- a/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
+++ b/php_tut/homebrew-xampp/phpMyAdmin-custom/apache2.conf
@@ -168,16 +168,7 @@ Include ports.conf
 </Directory>
 
 <Directory /var/www/>
-        Options +Indexes FollowSymLinks
-        AllowOverride All
-        Require all granted
-        Satisfy Any
-        Order allow,deny
-        Allow from all
-</Directory>
-
-<Directory /var/www/html/php_tut>
-        Options +Indexes FollowSymLinks
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
         Satisfy Any
